# crashtest

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml  release.yml
crashtest/: __init__.py  frame.py  frame_collection.py  inspector.py
crashtest/contracts/: base_solution.py  has_solutions_for_exception.py  provides_solution.py  solution.py  solution_provider_repository.py
crashtest/solution_providers/: solution_provider_repository.py
tests/: helpers.py  test_frame.py  test_inspector.py
tests/solution_providers/: test_solution_provider_repository.py
