[tool.poetry]
name = "crashtest"
version = "0.3.0"
description = "Manage Python errors with ease"
authors = ["Sébastien Eustace <sebastien@eustace.io>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/sdispater/crashtest"
repository = "https://github.com/sdispater/crashtest"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
black = "^19.10b0"
pytest-cov = "^2.8.1"
pre-commit = "^1.20.0"

[tool.isort]
line_length = 88
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
not_skip = "__init__.py"
skip_glob = ["*/setup.py"]
filter_files = true

known_first_party = "crashtest"
known_third_party = ["pytest"]
[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
