[tool.poetry]
name = "crashtest"
version = "0.4.0"
description = "Manage Python errors with ease"
authors = ["Sébastien Eustace <sebastien@eustace.io>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/sdispater/crashtest"
repository = "https://github.com/sdispater/crashtest"

include = [
  { path = "crashtest/py.typed" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "crashtest"
known_third_party = ["pytest"]

[tool.mypy]
strict = true
files = "crashtest, tests"

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
