[tool.poetry]
name = "crashtest"
version = "0.4.1"
description = "Manage Python errors with ease"
authors = ["Sébastien Eustace <sebastien@eustace.io>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/sdispater/crashtest"
repository = "https://github.com/sdispater/crashtest"

include = [
  { path = "crashtest/py.typed" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
mypy = "^0.981"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
src_paths = [
    "crashtest",
    "tests"
]
add_imports = [
    "from __future__ import annotations"
]
filter_files = true
known_first_party = "crashtest"
known_third_party = ["pytest"]

[tool.mypy]
strict = true
files = "crashtest, tests"
show_error_codes = true
pretty = true

[tool.pycln]
all = true

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
